cleaned + z-index fixed

--- a/src/scss/partials/quickcontrols.scss
+++ b/src/scss/partials/quickcontrols.scss
@@ -1,8 +1,3 @@
-/*
-##################################################
-                QUICK CONTROLS
-##################################################
-*/
 .quickcontrols {
   display: flex;
   position: fixed;
@@ -14,7 +9,7 @@
   align-items: flex-end;
   flex-flow: column-reverse;
   /* background-color: rgba(0, 0, 0, .1); */
-  z-index: 99;
+  z-index: 1;
 }
 
 .quickcontrols__menu {
